# CS50-s-Introduction-to-AI-projects

./: README.md
project 0/degrees/: degrees.py
project 0/tictactoe/: tictactoe.py
project 1/knights/: puzzle.py
project 1/minesweeper/: minesweeper.py
project 2/heredity/: heredity.py
project 2/pagerank/: pagerank.py
project 3/crossword/: generate.py
project 4/nim/: nim.py
project 4/shopping/: pyproject.toml  shopping.py  test.py
project 5/traffic/: model.h5  pyproject.toml  traffic.py
project 6/attention/: analysis.md  mask.py  pyproject.toml
project 6/parser/: parser.py  pyproject.toml
